👨‍💻👍made the initial stuff to develop the api
